# sistema-para-loja-de-calcados

./: CMakeLists.txt  README.md  banco_de_dados.cpp  banco_de_dados.h  cadastro_cliente.cpp  cadastro_cliente.h  cadastro_cliente.ui  cadastroprodutos.cpp  cadastroprodutos.h  cadastroprodutos.ui  cadastrovendedor.cpp  cadastrovendedor.h  cadastrovendedor.ui  controle_estoque.cpp  controle_estoque.h  controle_estoque.ui  controle_vendas.cpp  controle_vendas.h  controle_vendas.ui  controle_vendedores.cpp  controle_vendedores.h  controle_vendedores.ui  inserir_produtos.cpp  inserir_produtos.h  inserir_produtos.ui  main.cpp  principal.cpp  principal.h  principal.ui  remover_produtos.cpp  remover_produtos.h  remover_produtos.ui  resources.qrc  vendedor.cpp  vendedor.h
